# Python_WEB_DZ_14

./: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_hw_14.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 20dddcd91b90_init.py  e7cc3604ea61_init.py
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  cloud_image.py  email.py  roles.py
src/services/templates/: email_template.html
templates/: index.html
tests/: conftest.py  test_main.py  test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py
