[tool.poetry]
name = "hw-14"
version = "0.1.0"
description = ""
authors = ["MAX"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.2.6"


[tool.poetry.group.dev.dependencies]
aiosmtplib = "2.0.2"
annotated-types = "0.6.0"
anyio = "4.2.0"
async-timeout = "4.0.3"
blinker = "1.7.0"
certifi = "2024.2.2"
cloudinary = "1.38.0"
colorama = "0.4.6"
dnspython = "2.5.0"
email-validator = "2.1.0.post1"
exceptiongroup = "1.2.0"
fastapi = "0.109.2"
fastapi-limiter = "0.1.6"
fastapi-mail = "1.4.1"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.26.0"
idna = "3.6"
iniconfig = "2.0.0"
jinja2 = "3.1.3"
libgravatar = "1.0.4"
markupsafe = "2.1.5"
packaging = "23.2"
pluggy = "1.4.0"
pydantic = "2.6.1"
pydantic-settings = "2.1.0"
pydantic-core = "2.16.2"
pytest = "8.0.0"
python-dotenv = "1.0.1"
redis = "5.0.1"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.26"
starlette = "0.36.3"
tomli = "2.0.1"
typing-extensions = "4.9.0"
urllib3 = "2.2.0"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
